deployments/kubernetes/library_server/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: library-server
  name: library-server
